# Better_Testing_Agent

./: .env.example  .gitignore  BENCHMARK_CASES.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  KAGGLE_AWARD_C_POST.md  PROMPT_FOR_KAI.md  README.md  STATISTICIAN_REVIEW.md  TECHNICAL_REPORT.md  WEBSITE_DESIGN.md  pyproject.toml
.claude/: settings.json
data/: BET_data.csv  README.md  bright_stars.csv  gene_pair_subtype.csv  generate_dataset.py
data/train/: dose_sys_train.csv
data/val/: covariates.csv
examples/: benchmark_cases.py  gene_pair_subtype.py  stai_x_overdose.py  stars_independence.py
playground/: README.md  __init__.py  app.py  pipeline.py
src/hta/: __init__.py  agent.py  bet_screen.py  cli.py  config.py
src/hta/models/: __init__.py  data.py  design.py  report.py  test.py
src/hta/modules/: __init__.py  causal.py  executor.py  profiler.py  reporter.py  selector.py
tests/: conftest.py  test_agent.py  test_bet_screen.py  test_causal.py  test_cli.py  test_dialogue_eval.py  test_examples.py  test_executor.py  test_models.py  test_playground.py  test_profiler.py  test_reporter.py  test_selector.py
web/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
web/backend/: config.py  executor.py  export.py  main.py  plots.py  reporter.py  schemas.py  stubs.py
web/backend/api/: dialogue.py  export.py  run.py  sessions.py
web/backend/storage/: base.py  local.py
web/backend/templates/: report.html.j2
web/data/sessions/163aeb78-4707-40b1-817a-767ac9c89373/: data.csv  metadata.json  preview.json  profile.json  report.json  variables.json
web/data/sessions/a0d5c188-3e14-4ac6-be39-70a46c84d647/: metadata.json
web/data/sessions/c84d4ba7-24bd-48ad-a5f8-c6c2ccae53c7/: metadata.json
web/frontend/: package-lock.json  package.json  tailwind.config.js
web/frontend/public/: sample.csv
web/frontend/src/: App.tsx  index.css
web/frontend/src/api/: client.ts  mock.ts
web/frontend/src/components/About/: About.tsx
web/frontend/src/components/Landing/: Landing.tsx
web/frontend/src/components/Results/: PlotViewer.tsx  index.tsx
web/frontend/src/components/Wizard/: StepBET.tsx  StepDialogue.tsx  StepResults.tsx  StepReview.tsx  StepUpload.tsx  StepVariables.tsx  Wizard.tsx
web/frontend/src/components/shared/: Badge.tsx  CopyButton.tsx  ErrorBoundary.tsx
web/frontend/src/hooks/: useSession.ts
web/frontend/src/types/: api.ts
