[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hypothesis-testing-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "openai>=1.0.0",
    "httpx[socks]>=0.27.0",
    "pydantic>=2.0.0",
    "scipy>=1.11.0",
    "numpy>=1.26.0",
    "pandas>=2.0.0",
    "pingouin>=0.5.4",
    "scikit-posthocs>=0.9.0",
    "statsmodels>=0.14.0",
    "lifelines>=0.27",
    "scikit-learn>=1.3",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]
web = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
    "boto3>=1.34.0",
]

[project.scripts]
hta = "hta.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
strict = true
python_version = "3.11"

# Third-party scientific libraries ship without type stubs (or a py.typed marker); under
# --strict their imports would otherwise fail with import-untyped. dotenv is the same.
[[tool.mypy.overrides]]
module = ["pandas.*", "scipy.*", "statsmodels.*", "dotenv.*", "pingouin.*",
          "scikit_posthocs.*", "lifelines.*", "sklearn.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/hta --cov-report=term-missing"
markers = [
    "slow: marks tests that call live LLM APIs (deselect with -m 'not slow')",
]
